--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# eggs is string and 100 is int which is not a valid "
+    "# eggs is string and 100 is int, variable name cant start with numbers or special characters except _ ."
    ]
   },
   {
